assets/css/portrait.css
/* Nav lists */

nav#masthead {
  margin: -1rem -2rem 2rem;
  padding: 0 2rem 1rem;
  border-bottom: 1px solid var(--c-line);
}

nav#masthead li, nav#page-projects li {
  margin-right: 1rem;
  display: inline-block;
}

nav#projects {
  margin-bottom: 4rem;
}

nav#projects li.viewing {
  /* margin: 0; */
}

nav#projects ul:not(.all) li:not(.viewing) {
  display: none;
}

nav#page-images {
  display: none;
}

nav#page-projects {
  margin-top: 4rem;
}

nav#details {
  display: none;
}



/* Gallery */

div#gallery li {
  margin: 2rem -2rem;
  padding: 0 2rem;
}

@media (prefers-color-scheme: light) {
  div#gallery li[class=""],
  div#gallery li[class="viewing"] {
    padding: 2rem;
  }

  div#gallery li[class=""] + li[class=""],
  div#gallery li[class="viewing"] + li[class=""] {
    margin-top: -2rem;
    padding-top: 0;
  }
}

div#gallery img {
  max-width: 100%;
}

div#gallery div.text {
  padding-top: 2rem;
  font-size: 1.25rem;
}

div#gallery li.grid div {
  grid-gap: .5rem;
  grid-template-columns: var(--grid-p);
}

p#waiting {
  display: none;
}

